salesforce-main/src/main/default/objects/Bank_Account__c/fields/BPP_IBAN__c.field-meta.xml
<CustomField>
    <fullName>BPP_IBAN__c</fullName>
    <label>IBAN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>