salesforce-main/src/main/default/objects/Bank_Account__c/fields/BPP_SWIFT_Code__c.field-meta.xml
<CustomField>
    <fullName>BPP_SWIFT_Code__c</fullName>
    <label>SWIFT Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>