salesforce-main/src/main/default/objects/Bank_Account__c/fields/Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Sort_Code__c</fullName>
    <label>Sort Code</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>