salesforce-main/src/main/default/objects/Bank_Account__c/validationRules/Validate_Account_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Account_Number</fullName>
    <active>true</active>
    <description>Ensures Account Number is a number and is 8 characters</description>
    <errorConditionFormula>IF ( 
NOT(ISBLANK(Account_Number__c)), LEN(Account_Number__c) &lt;&gt; 8, false 
)</errorConditionFormula>
    <errorDisplayField>Account_Number__c</errorDisplayField>
    <errorMessage>Please enter an 8 digit Account Number</errorMessage>
</ValidationRule>